  zone identifier.
* The zdumptest utility now checks local to utc conversions in addition to
  utc to local conversions.
* zdumptestall utility now exits if not supplied with enough parameters.
* eql? method defined on Country and Timezone that is equivalent to ==.
* == method of Timezone no longer raises an exception when passed an object
  with no identifier method.
* hash method defined on Country that returns the hash of the code.
* hash method defined on Timezone that returns the hash of the identifier.
* Miscellaneous API documentation corrections and improvements.
* Timezone definition and indexes are now excluded from rdoc (the contents were
  ignored with #:nodoc: anyway).
* Installation of gem now causes rdoc API documentation to be generated. #4905.
* When optimizing transitions to generate zone definitions, check the
  UTC and standard offsets rather than just the total offset to UTC. Fixes an
  incorrect abbreviation issue with Europe/London, Europe/Dublin and 
  Pacific/Auckland.
* Eliminating unnecessary .nil? calls to give a minor performance gain.
* Timezone.all and Timezone.all_identifiers now return all the 
  Timezones/identifiers rather than just those associated with countries. #4146.
* Added all_data_zones, all_data_zone_identifiers, all_linked_zones and
  all_linked_zone_identifiers class methods to Timezone.
* Added a strftime method to Timezone that converts a time in UTC to local
  time and then returns it formatted. %Z is replaced with the Timezone 
  abbreviation for the given time (for example, EST or EDT). #4143.


== Version 0.2.1 (tzdata v2006d) - 17-Apr-2006

* Fix a performance issue caused in 0.2.0 with Timezone.local_to_utc. 
  Conversions performed on TimeOrDateTime instances passed to <=> are now
  cached as originally intended. Thanks to Michael Smedberg for spotting this.
* Fix a performance issue with the local_to_utc period search algorithm 
  originally implemented in 0.1.0. The condition that was supposed to cause